// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField doesn't render the errorMessage if error prop is false 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField doesn't render the errorMessage if errorMessage prop is undefined 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected as password field 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected when disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "opacity": 0.6,
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={false}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
</View>
`;

exports[`TextField renders as expected with error message 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholder="Placeholder"
      placeholderTextColor="hsl(210, 10%, 40%)"
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="textInput"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    Error message
  </Text>
</View>
`;
